Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68707

QLowEnergyService::writeCharacteristic - implement timeout logic for Darwin OS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.11.2
    • 5.11
    • None
    • b6c0e2af96129c297b87c25796a36c3fbc680269

      When we write a characteristic with write mode 'WriteWithResponse' we rely on our delegate and a special callback from CoreBluetooth. Unfortunately, there is no notion of a timeout in CoreBluetooth, so it can happen we never have any response but never report any error either. Like it is done with different discovery methods in QLowEnergyController, we have to introduce 'external' timeout handling (here 'external' means Qt does this, not CoreBluetooth).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes