QtBluetooth - handle timeous in characteristic writes (Darwin OS)

This can allegedly happen when executing  write with notification.
While never observed so far, can easily be predicted/emulated,
resulting in QLEC stuck in queued write/read requests and not
progressing any futher.

Task-number: QTBUG-68707
Change-Id: I3321257bb84a83a8ea25f9ae4e8acbdb95568cfa
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>